<resources>
    <string name="app_name">Teacher\'s Job</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="portugues">Português</string>
    <string name="matematica">Matemática</string>
    <string name="ciencias">Ciências</string>
    <string name="historia">História</string>
    <string name="geografia">Geografia</string>
    <string name="artes">Artes</string>
    <string name="ingles">Inglês</string>
    <string name="filosofia">Filosofia</string>
    <string name="sociologia">Sociologia</string>
    <string name="fisica">Física</string>
    <string name="quimica">Química</string>
    <string name="biologia">Biologia</string>
    <string name="educacao_fisica">Educação Física</string>
    <string name="espanhol">Espanhol</string>
    <string name="ensino_medio">Ensino Médio</string>
    <string name="ensino_fundamental">Ensino Fundamental II</string>
    <string name="entrar">ENTRAR</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="discplinas_titulo">Disciplinas de Interesse</string>
    <string name="atuacao_titulo">Área de Atuação</string>
    <string name="confirmar">Confirmar</string>
    <string name="pular">Pular</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="cidade">Cidade</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="carregar_foto">Carregar Foto</string>
    <string name="cadastre_se">Cadastre-se!"</string>
    <string name="eu_concordo">EU CONCORDO"</string>
    <string name="titulo">Título"</string>
    <string name="local">Local"</string>
    <string name="data_de_encerrameto">Data de Encerramento"</string>
    <string name="descricao">Descrição"</string>
    <string name="alterar">ALTERAR"</string>
    <string name="senha_atual">Senha Atual"</string>
    <string name="nova_senha">Nova Senha"</string>
    <string name="confirmar_nova_senha">Confirmar Nova Senha"</string>
    <string name="termos">Termos e Condições de Uso"</string>
    <string name="buscar_vagas">Buscar Vagas"</string>
    <string name="publicar_vaga">Publicar Vaga"</string>
    <string name="login_incorreto">Usuário ou Senha Incorreto</string>
</resources>


