<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_tam"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tituloTextInputLayoutAlterar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tituloTextInputEditTextAlterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tam"
            android:hint="@string/titulo" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/localTextInputLayoutAlterar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/localTextInputEditTextAlterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tam"
            android:hint="@string/local" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dataEncerramentoTextInputLayoutAlterar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dataEncerramentoTextInputEditTextAlterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tam"
            android:hint="@string/data_de_encerrameto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/descricaoTextInputLayoutAlterar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/descricaoTextInputEditTextAlterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tam"
            android:hint="@string/descricao" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirmarButtonAlterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/distancia_padrao"
        android:layout_marginTop="260dp"
        android:background="@color/color_primary"
        android:paddingLeft="@dimen/button_confirmar_padding"
        android:paddingRight="@dimen/button_confirmar_padding"
        android:text="@string/alterar"
        android:textColor="@color/color_text_buttons"
        android:textStyle="bold" />

</LinearLayout>