<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_tam"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fotoUsuarioImageViewCadastrado"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:clickable="true"
            app:srcCompat="@drawable/ic_launcher_background" />

        <android.support.v7.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <ImageView
                android:id="@+id/cameraImageViewCadastrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <TextView
                android:id="@+id/carregarFotoTextViewCadastrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/carregar_foto"
                android:textSize="@dimen/carregar_foto_size"
                app:layout_gravity="center" />


        </android.support.v7.widget.GridLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nomeTextInputLayoutCadastrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nomeTextInputEditTextCadastrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/nome" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/telefoneTextInputLayoutCadastrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/telefoneTextInputEditTextCadastrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/telefone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cidadeTextInputLayoutCadastrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cidadeTextInputEditTextCadastrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/cidade" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTextInputLayoutCadastrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailTextInputEditTextCadastrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/senhaAtualTextInputLayoutCadastrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/senhaAtualTextInputEditTextCadastrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/senha_atual" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/senhaTextInputLayoutCadastrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/senhaTextInputEditTextCadastrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/nova_senha"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmarSenhaTextInputLayoutCadastrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirmarSenhaTextInputEditTextCadastrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/confirmar_nova_senha"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/confirmarButtonCadastrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/margin_confirmar"
            android:layout_marginTop="@dimen/margin_confirmar"
            android:background="@color/color_primary"
            android:paddingLeft="@dimen/button_confirmar_padding"
            android:paddingRight="@dimen/button_confirmar_padding"
            android:text="@string/alterar"
            android:textColor="@color/color_text_buttons"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>