<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_tam"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fotoUsuarioImageView"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <android.support.v7.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <ImageView
                android:id="@+id/cameraImageViewCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <TextView
                android:id="@+id/carregarFotoTextViewCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carregar_foto"
                android:textSize="@dimen/carregar_foto_size"
                app:layout_gravity="center" />


        </android.support.v7.widget.GridLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nomeTextInputLayoutCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nomeTextInputEditTextCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/nome" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/telefoneTextInputLayoutCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/telefoneTextInputEditTextCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/telefone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cidadeTextInputLayoutCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cidadeTextInputEditTextCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/cidade" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTextInputLayoutCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailTextInputEditTextCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/senhaTextInputLayoutCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/senhaTextInputEditTextCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/senha"
                android:passwordToggleEnabled="true"
                app:counterEnable="true"
                app:counterMaxLenght="8"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmarSenhaTextInputLayoutCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirmarSenhaTextInputEditTextCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tam"
                android:hint="@string/confirmar_senha"
                android:passwordToggleEnabled="true"
                app:counterEnable="true"
                app:counterMaxLenght="8"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/confirmarButtonCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/margin_confirmar"
            android:layout_marginTop="@dimen/margin_confirmar"
            android:background="@color/color_primary"
            android:paddingLeft="@dimen/button_confirmar_padding"
            android:paddingRight="@dimen/button_confirmar_padding"
            android:text="@string/confirmar"
            android:textColor="@color/color_text_buttons"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>